[FIX] show out params for smartflow errors flow
[FIX] smart connection formula

[FIX] scrollbar JSON node

[FIX] check SnCsvMappedNode

--- a/src/app/shared/modules/smart-nodes-custom/shared/sn-json-node/sn-json-monaco-edit/sn-json-monaco-edit.component.scss
+++ b/src/app/shared/modules/smart-nodes-custom/shared/sn-json-node/sn-json-monaco-edit/sn-json-monaco-edit.component.scss
@@ -30,6 +30,6 @@
     background-image: var(--SN-NODE-HEADER-BACKGROUND-SNJSONNODE);
 }
 .editorContainer {
-    height: 100%;
+    height: calc(100% - var(--SN-NODE-HEADER-HEIGHT));
     border-radius: 4px;
 }
